css/styles.css
/* Colors for reference:
#f09
#60f
#90f
#d4d4d4 */

body {
  font-family: 'Ubuntu', sans-serif;
}

header {
  background-image: url(../img/hero-picture.jpg);
  /* Full page centered background image */
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  height: 100vh;
}

/* Holds the content into a comfortable width for reading */
.container {
  max-width: 800px;
  margin: auto;
  padding: 0 15px;
  position: relative;
}

/* Hides navigation menu for small screens */
nav {
  display: none;
}

/*
### SHOWCASE CONTENT ###
*/
#showcase {
  height: 100vh;
  display: flex;
  align-items: center;
}

#title {
  color: #d4d4d4;
  font-size: 6rem;
  font-weight: 300;
  margin-top: 6rem;
}

#brand {
  color: #d4d4d4;
  font-size: 2rem;
  margin: 1rem 0 6rem 0;
}

#brand span {
  color: #f09;
}

#cta {
  color: #222;
  background-color: #f09;
  font-size: 2rem;
  text-decoration: none;
  padding: 8px 20px;
  border-radius: 10px;
}

#cta:hover {
  color: #f09;
  background-color: #222;
  transition: .3s;
}

/*
### ABOUT ME CONTENT ###
*/
#about {
  background-color: #60f;
}

#about h2 {
  color: #f09;
  font-size: 4rem;
  text-align: right;
  padding-top: 6rem;
}

#about img{
  width: 180px;
}

#about p {
  color: #d4d4d4;
  font-size: 1.6rem;
  padding: 4rem 0 6rem 0;
}

/*
### CONTACT CONTENT ###
*/
#contact {
  background-color: #222;
  color: #d4d4d4;
}

#contact h2 {
  font-size: 4rem;
  text-align: right;
  padding-top: 6rem;
}

#contact ul {
  margin: 40px 0;
}

#contact li {
  list-style: none;
  padding: 5px 0;
}

#contact a {
  color: #d4d4d4;
  font-size: 1.8rem;
  text-decoration: none;
}

#contact a:hover {
  color: #f09;
}

#contact p {
  font-size: 1.4rem;
  text-align: right;
  padding: 10px 0;
}

/*
### MEDIA QUERIES ###
*/
@media only screen and (min-width: 600px) {
  /*
### SHOWCASE CONTENT ###
*/
  nav {
  display: block;
  position: absolute;
  top: 20px;
  right: 0;
}

nav a {
  color: #d4d4d4;
  font-size: 2rem;
  text-decoration: none;
  padding-right: 25px;
}

nav a:hover {
  color: #f09;
}

#title {
  font-size: 7.6rem;
}

#brand {
  font-size: 2.6rem;
}

#cta {
  font-size: 2.2rem;
}
}

